@@ -1,3 +1,10 @@
+2018-03-27  Thomas Koenig  <tkoenig@gcc.gnu.org>
+	Harald Anlauf  <anlauf@gmx.de>
+
+	PR fortran/85083
+	* primary.c (gfc_convert_to_structure_constructor): Check
+	conformance of argument types in structure constructor.
+
 2018-03-26  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/66709
